tests/ui/pattern/usefulness/integer-ranges/reachability.stderr
error: unreachable pattern
  --> $DIR/reachability.rs:9:13
   |
LL |             $t2 => {}
   |             ^^^^^^^^^ this arm is never executed
...
LL |     m!(0u8, 42, 42);
   |     --------------- in this macro invocation
   |
note: the lint level is defined here
  --> $DIR/reachability.rs:3:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable pattern
  --> $DIR/reachability.rs:9:13
   |
LL |             $t2 => {}
   |             ^^^^^^^^^ this arm is never executed
...
LL |     m!(0u8, 20..=30, 20);
   |     -------------------- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable pattern
  --> $DIR/reachability.rs:9:13
   |
LL |             $t2 => {}
   |             ^^^^^^^^^ this arm is never executed
...
LL |     m!(0u8, 20..=30, 21);
   |     -------------------- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable pattern
  --> $DIR/reachability.rs:9:13
   |
LL |             $t2 => {}
   |             ^^^^^^^^^ this arm is never executed
...
LL |     m!(0u8, 20..=30, 25);
   |     -------------------- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable pattern
  --> $DIR/reachability.rs:9:13
   |
LL |             $t2 => {}
   |             ^^^^^^^^^ this arm is never executed
...
LL |     m!(0u8, 20..=30, 29);
   |     -------------------- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable pattern
  --> $DIR/reachability.rs:9:13
   |
LL |             $t2 => {}
   |             ^^^^^^^^^ this arm is never executed
...
LL |     m!(0u8, 20..=30, 30);
   |     -------------------- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable pattern
  --> $DIR/reachability.rs:9:13
   |
LL |             $t2 => {}
   |             ^^^^^^^^^ this arm is never executed
...
LL |     m!(0u8, 20..30, 20);
   |     ------------------- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable pattern
  --> $DIR/reachability.rs:9:13
   |
LL |             $t2 => {}
   |             ^^^^^^^^^ this arm is never executed
...
LL |     m!(0u8, 20..30, 21);
   |     ------------------- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable pattern
  --> $DIR/reachability.rs:9:13
   |
LL |             $t2 => {}
   |             ^^^^^^^^^ this arm is never executed
...
LL |     m!(0u8, 20..30, 25);
   |     ------------------- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable pattern
  --> $DIR/reachability.rs:9:13
   |
LL |             $t2 => {}
   |             ^^^^^^^^^ this arm is never executed
...
LL |     m!(0u8, 20..30, 29);
   |     ------------------- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable pattern
  --> $DIR/reachability.rs:9:13
   |
LL |             $t2 => {}
   |             ^^^^^^^^^ this arm is never executed
...
LL |     m!(0u8, 20..=30, 20..=30);
   |     ------------------------- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable pattern
  --> $DIR/reachability.rs:9:13
   |
LL |             $t2 => {}
   |             ^^^^^^^^^ this arm is never executed
...
LL |     m!(0u8, 20.. 30, 20.. 30);
   |     ------------------------- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable pattern
  --> $DIR/reachability.rs:9:13
   |
LL |             $t2 => {}
   |             ^^^^^^^^^ this arm is never executed
...
LL |     m!(0u8, 20..=30, 20.. 30);
   |     ------------------------- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable pattern
  --> $DIR/reachability.rs:9:13
   |
LL |             $t2 => {}
   |             ^^^^^^^^^ this arm is never executed
...
LL |     m!(0u8, 20..=30, 21..=30);
   |     ------------------------- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable pattern
  --> $DIR/reachability.rs:9:13
   |
LL |             $t2 => {}
   |             ^^^^^^^^^ this arm is never executed
...
LL |     m!(0u8, 20..=30, 20..=29);
   |     ------------------------- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable pattern
  --> $DIR/reachability.rs:9:13
   |
LL |             $t2 => {}
   |             ^^^^^^^^^ this arm is never executed
...
LL |     m!('a', 'A'..='z', 'a'..='z');
   |     ----------------------------- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable pattern
  --> $DIR/reachability.rs:65:9
   |
LL |         5..=8 => {},
   |         ^^^^^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/reachability.rs:71:9
   |
LL |         5..15 => {},
   |         ^^^^^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/reachability.rs:78:9
   |
LL |         5..25 => {},
   |         ^^^^^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/reachability.rs:86:9
   |
LL |         5..25 => {},
   |         ^^^^^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/reachability.rs:92:9
   |
LL |         5..15 => {},
   |         ^^^^^^^^^^^ this arm is never executed

error: unreachable pattern
  --> $DIR/reachability.rs:98:9
   |
LL |         _ => {},
   |         ^ this pattern is irrefutable; subsequent arms are never executed
LL |         '\u{D7FF}'..='\u{E000}' => {},
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ this arm is never executed

error: multiple unreachable patterns
  --> $DIR/reachability.rs:120:9
   |
LL |         &FOO => {}
   |         ^^^^^^^^^^ this arm is never executed
LL |         BAR => {}
   |         ^^^^^^^^^ this arm is never executed

error: aborting due to 23 previous errors

